--- a/5./6.3.-dialogflow.md
+++ b/5./6.3.-dialogflow.md
@@ -2,7 +2,7 @@
 
 Dialogflow는 2016년에 Api.ai 라고 하는 유명한 챗봇 플랫폼을 Google이 인수하여 자연어 처리나 Intent 매칭과 같은 대화식 인터페이스의 핵심 엔진인 머신러닝 엔진을 Google의 머신러닝 엔진으로 변경해서 좀 더 강화한 형태로 만든 챗봇 플랫폼입니다.
 
-챗봇 플랫폼으로서의 Dialogflow의 가장 큰 특징은 최소한의 프로그래밍으로 Dialog\(대화\)의 Flow\(흐름\)를 만들기만 하면 이를 통해 챗봇을 만들수 있다데 있습니다. 즉 자연어 그대로 대화를 입력하면 그게 바로 챗봇이 되는 형태로 되어 있습니다.
+챗봇 플랫폼으로서의 Dialogflow의 가장 큰 특징은 최소한의 프로그래밍으로 Dialog\(대화\)의 Flow\(흐름\)를 만들기만 하면 이를 통해 챗봇을 만들수 있다는데 있습니다. 즉 자연어 그대로 대화를 입력하면 그게 바로 챗봇이 되는 형태로 되어 있습니다.
 
 기본적으로 Dialogflow는 대화를 구성해서 챗봇을 만들기 때문에 대화를 구성하는 기본 개념인 Intent\(화자의 의도\), Entity\(속성\), Context\(문맥\) 를 이해하는 것이 중요합니다.
 
